--- a/pocket-ctis/public/views/activateAccount.hbs
+++ b/pocket-ctis/public/views/activateAccount.hbs
@@ -41,6 +41,7 @@
 <p>Your {{app_name}} account for Bilkent {{department}} has been created! Please click the link below to activate your account now!</p>
 <p><a class="button" href="{{ link }}">Activate Account</a></p>
 <p>If you your account has been activated already, please ignore this email.</p>
+<p>Please note that this link will expire in a year.</p>
 <p>Thank you!</p>
 </body>
 </html>
