--- a/pocket-ctis/public/views/reactivateAccount.hbs
+++ b/pocket-ctis/public/views/reactivateAccount.hbs
@@ -36,13 +36,10 @@
     </style>
 </head>
 <body>
-<h1>Admin Account Activation</h1>
+<h1>Account Activation</h1>
 <p>{{ name }} {{ surname }},</p>
-<p>Your {{app_name}} account for Bilkent {{department}} has been promoted to an admin acount! Please click the link below to activate your
-admin account!</p>
-<p><a class="button" href="{{ link }}">Activate Admin Account</a></p>
-<p>If you your account has been activated already, please ignore this email.</p>
-<p>Please note that this link will expire in 30 days.</p>
+<p>Your {{app_name}} account for Bilkent {{department}} has been re-activated! Please click the link below to start using {{app_name}} now!</p>
+<p><a class="button" href="{{ link }}">Activate Account</a></p>
 <p>Thank you!</p>
 </body>
 </html>
