--- a/pocket-ctis/components/UserInfoSidebar/UserInfoSidebar.module.scss
+++ b/pocket-ctis/components/UserInfoSidebar/UserInfoSidebar.module.scss
@@ -16,7 +16,7 @@
 
 
 .sidebar {    
-    position: fixed;
+    position:sticky;
     top: $navbar-height;
     height: 100%;
     width: 20vw;
@@ -26,17 +26,47 @@
     z-index: 1;
     background-color: $true-white;
     box-shadow: 0px 2px 8px 0px $ctis-grey-100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     padding: $padding-large $padding-xlarge;
 
+    &_closeBtn{
+        display: none;
+    }
+
     @include media-query(medium) {
+        position: fixed;
         top: 0;
         left: -100vw;
         height: 100vh;
         max-height: none;
         box-shadow: none;
+        transition: all 0.5s ease-in;
+        
+        &_closeBtn{
+            display: block;
+            font-size: 40px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: all 0.2s;
+
+            &:hover{
+                background-color: rgba(200, 200, 200, 0.4);
+            }
+        }
 
         &.visible {
+            transition: all 0.5s ease-in-out;
             left: 0;
         }
     }
