--- a/pocket-ctis/components/AcademicUpdates/AcademicUpdates.module.scss
+++ b/pocket-ctis/components/AcademicUpdates/AcademicUpdates.module.scss
@@ -1,7 +1,42 @@
 @import '../../styles/variables.scss';
 
 .academic_updates {
-
+    table {
+        border-radius: $border-radius-small;
+        overflow: hidden;
+        box-shadow: 0px 0px 0px 1px $ctis-blue-300;
+        width: 100%;
+    
+        th {
+            background-color: $ctis-blue-200;
+            color: $ctis-blue-500;
+            @include secondary-text()
+        }
+    
+        th, td { padding: $padding-medium $padding-large; }
+    
+        tbody tr {
+            &:nth-of-type(odd) {
+                background-color: $true-white;
+            }
+            &:nth-of-type(even) {
+                background-color: $ctis-blue-50;
+            }
+            &:not(:last-of-type) {
+                border-bottom: 1px solid $ctis-blue-200;
+            }
+        }
+    
+        td a {
+            text-decoration: underline;
+            color: inherit;
+            font-weight: $fw-medium;
+    
+            @include attention() {
+                color: $ctis-blue-400;
+            }
+        }
+    }
 }
 
 .academic_updates_table {
