grad projects and settings

--- a/pocket-ctis/components/ChangePasswordForm/ChangePasswordForm.module.css
+++ b/pocket-ctis/components/ChangePasswordForm/ChangePasswordForm.module.css
@@ -5,7 +5,9 @@
 
 .inputLabel{
     position: absolute;
-    top: -10px;
+    top: 0px;
+    height: 1px;
+    line-height: 0px;
     left: 10px;
     background-color: white;
     padding: 0px 5px;
