--- a/pocket-ctis/components/Navbar/NavigationBar.module.scss
+++ b/pocket-ctis/components/Navbar/NavigationBar.module.scss
@@ -16,6 +16,10 @@
         font-weight: $fw-black;
         font-family: $ff-ctis;
     }
+
+    img {
+        height: 80%;
+    }
 }
 
 .wrapper {
