--- a/pocket-ctis/privateAssets/views/activateAdminAccount.hbs
+++ b/pocket-ctis/privateAssets/views/activateAdminAccount.hbs
@@ -40,6 +40,7 @@
 <p>{{ name }} {{ surname }},</p>
 <p>Your {{app_name}} account for Bilkent {{department}} has been promoted to an admin acount! Please click the link below to activate your
 admin account!</p>
+<h2>To activate your admin account, you must activate your user account first.</h2>
 <p><a class="button" href="{{ link }}">Activate Admin Account</a></p>
 <p>If you your account has been activated already, please ignore this email.</p>
 <p>Please note that this link will expire in 30 days.</p>
