--- a/pocket-ctis/styles/companies.module.scss
+++ b/pocket-ctis/styles/companies.module.scss
@@ -4,9 +4,11 @@
     padding: 4em 3em;
 
     &_info {
-        span {display: block;}
+        span {
+            display: block;
+        }
 
-        > div:first-of-type {
+        >div:first-of-type {
             display: flex;
             align-items: center;
             margin-bottom: 3em;
@@ -38,7 +40,7 @@
     &_internship_badge span {
         font-size: 0.8em;
         color: $white;
-        background-color: $medium-grey;
+        background-color: #FFBD59;
         padding: 0.4em 0.6em;
         border-radius: 500px;
     }
@@ -52,16 +54,18 @@
         align-items: center;
         justify-content: space-between;
 
-        > div:first-of-type { display: flex;}
-
-        > div > div:first-of-type {margin-right: 1em;}
-
-        &_info {
-            span {display: block;}
+        >div:first-of-type {
+            display: flex;
         }
 
-        &_name {
+        >div>div:first-of-type {
+            margin-right: 1em;
+        }
 
+        &_info {
+            span {
+                display: block;
+            }
         }
 
         &_position {
@@ -87,7 +91,10 @@
         }
 
         &_location {
-            span{display: inline;}
+            span {
+                display: inline;
+            }
+
             color: $medium-grey;
             font-size: 0.8em;
         }
@@ -106,6 +113,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+
     margin-bottom: 3em;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
 }
