--- a/pocket-ctis/components/GraduationProjectsList/GraduationProjectsList.module.scss
+++ b/pocket-ctis/components/GraduationProjectsList/GraduationProjectsList.module.scss
@@ -1,15 +1,20 @@
 @import '../../styles/variables.scss';
 
 .graduation_projects {
-    padding: 4em 3em;
+    // padding: 4em 3em;
 
     .graduation_project_link {
         color: inherit;
+        display: flex;
+        align-items: center;
+        gap: 10px
     }
 
-    h2 {margin-bottom: 3em;}
+    h2 {
+        margin-bottom: 3em;
+    }
 
-    > div {
+    >div {
         display: flex;
         width: 100%;
         flex-wrap: wrap;
@@ -18,20 +23,22 @@
     &_item {
         width: 300px;
         height: fit-content;
-        padding: 1.2em;
+        // padding: 1.2em;
         background-color: white;
         border-radius: 5px;
         box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
         transition: box-shadow 0.3s linear;
-        margin-right: 3em;
-        margin-bottom: 3em;
+        // margin-right: 3em;
+        // margin-bottom: 3em;
 
         &:hover {
             box-shadow: 2px 4px 5px 0 rgba(0, 0, 0, 0.2);
             transition: box-shadow 0.3s linear;
         }
 
-        span {display: block}
+        span {
+            display: block
+        }
 
         &_team {
             font-size: 0.8em;
