--- a/pocket-ctis/styles/dataInsertion.module.css
+++ b/pocket-ctis/styles/dataInsertion.module.css
@@ -1,30 +1,34 @@
-.previewTable{
+.previewTable {
     width: 100%;
     border-radius: 5px;
     overflow: hidden;
 }
-.previewTable th{
+
+.previewTable th {
     background: #262d31;
     color: white;
     padding: 5px 15px;
 }
-.previewTable td{
+
+.previewTable td {
     padding: 5px 15px;
     border-bottom: 1px solid #F5F5F5;
 }
-.previewTable tr:nth-child(even){
+
+.previewTable tr:nth-child(even) {
     background-color: rgba(203, 194, 177, 0.36);
 }
-.previewTable tr:nth-child(odd){
+
+.previewTable tr:nth-child(odd) {
     background-color: rgba(225, 204, 192, 0);
 }
 
-.tableContainer{
+.tableContainer {
     overflow: scroll;
     padding-bottom: 10px;
 }
 
-.inputField{
+.inputField {
     margin-top: 10px;
     margin-bottom: 15px;
     width: 200px;
@@ -36,12 +40,12 @@
     resize: none;
 }
 
-.fileInput{
+.fileInput {
     margin-top: 10px;
     margin-bottom: 15px;
 }
 
-.loading{
+.loading {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -52,7 +56,7 @@
     opacity: 0.5;
 }
 
-.previewButton{
+.previewButton {
     padding: 8px;
 
     width: 89px;
@@ -75,7 +79,8 @@
     float: right;
     color: #FF8412;
 }
-.submitButton{
+
+.submitButton {
     padding: 8px;
     float: right;
     width: 83px;
@@ -96,5 +101,29 @@
 
     /* ctis yellow 700 */
 
-    color:#46640a;
+    color: #46640a;
+}
+
+.templateButton {
+    padding: 8px;
+    /* float: right; */
+    /* width: 83px; */
+    height: 30px;
+
+    background: #BFEAF3;
+    opacity: 0.8;
+
+    border: 1px solid #0078AB;
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+
+    /* ctis yellow 700 */
+
+    color: #0078AB;
 }
