--- a/pocket-ctis/components/Navbar/NavigationBar.module.scss
+++ b/pocket-ctis/components/Navbar/NavigationBar.module.scss
@@ -10,7 +10,9 @@
     height: $navbar-height;
     z-index: 2;
     padding: 0 $padding-xxlarge;
-    
+
+    gap: 20px;
+
     &_logo {
         font-size: $fs-large;
         font-weight: $fw-black;
@@ -18,7 +20,13 @@
     }
 
     img {
-        height: 80%;
+        // height: 80%;
+        width: 200px;
+
+        @include media-query(small) {
+            // visibility: hidden;
+            display: none;
+        }
     }
 }
 
@@ -41,5 +49,34 @@
         @include media-query(medium) {
             display: block;
         }
+    }
+}
+
+.searchBar {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    background-color: white;
+    height: 36px;
+    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid black;
+    width: 700px;
+
+    input {
+        width: 100%;
+        border: none;
+    }
+
+    svg {
+        cursor: pointer;
+    }
+
+    @include media-query(medium) {
+        width: 400px
+    }
+
+    @include media-query(small) {
+        width: 400px
     }
 }
