--- a/pocket-ctis/styles/internships.module.scss
+++ b/pocket-ctis/styles/internships.module.scss
@@ -1,4 +1,6 @@
 @import 'variables.scss';
 
-.internships_wrapper {padding: 4em 3em;}
-.internships_title {margin-bottom: 1.5em;}
+// .internships_wrapper {padding: 4em 3em;}
+.internships_title {
+    margin-bottom: 1.5em;
+}
