--- a/pocket-ctis/components/SectorsList/SectorsList.module.scss
+++ b/pocket-ctis/components/SectorsList/SectorsList.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .sectors {
-    padding: 3em 3.5em;
+    // padding: 3em 3.5em;
 
     &_title {
         text-align: center;
@@ -34,37 +34,42 @@
         overflow: hidden;
         box-shadow: 0px 0px 0px 1px $ctis-blue-300;
         width: 100%;
-    
+
         th {
             background-color: $ctis-blue-200;
             color: $ctis-blue-500;
             @include secondary-text()
         }
-    
-        th, td { padding: $padding-medium $padding-large; }
-    
+
+        th,
+        td {
+            padding: $padding-medium $padding-large;
+        }
+
         tbody tr {
             &:nth-of-type(odd) {
                 background-color: $true-white;
             }
+
             &:nth-of-type(even) {
                 background-color: $ctis-blue-50;
             }
+
             &:not(:last-of-type) {
                 border-bottom: 1px solid $ctis-blue-200;
             }
         }
-    
+
         td a {
-            text-decoration: underline;
+            // text-decoration: underline;
             color: inherit;
-            font-weight: $fw-medium;
-    
+            // font-weight: $fw-medium;
+
             @include attention() {
                 color: $ctis-blue-400;
             }
         }
-    }   
+    }
 }
 
 .sectors_filters_title {
@@ -80,7 +85,7 @@
         position: absolute;
         display: none;
 
-        &:checked + .sectors_filters_form_label {
+        &:checked+.sectors_filters_form_label {
             background-color: $light-grey;
             border: 1px solid $medium-grey;
             transition: background-color 0.3s linear, border 0.3s linear;
