--- a/pocket-ctis/components/UniversitiesList/UniversitiesList.module.scss
+++ b/pocket-ctis/components/UniversitiesList/UniversitiesList.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .universities {
-    // padding: 3em 3.5em;
+    padding: 3em 3.5em;
 
     &_title {
         text-align: center;
@@ -34,37 +34,32 @@
         overflow: hidden;
         box-shadow: 0px 0px 0px 1px $ctis-blue-300;
         width: 100%;
-
+    
         th {
             background-color: $ctis-blue-200;
             color: $ctis-blue-500;
             @include secondary-text()
         }
-
-        th,
-        td {
-            padding: $padding-medium $padding-large;
-        }
-
+    
+        th, td { padding: $padding-medium $padding-large; }
+    
         tbody tr {
             &:nth-of-type(odd) {
                 background-color: $true-white;
             }
-
             &:nth-of-type(even) {
                 background-color: $ctis-blue-50;
             }
-
             &:not(:last-of-type) {
                 border-bottom: 1px solid $ctis-blue-200;
             }
         }
-
+    
         td a {
-            // text-decoration: underline;
+            text-decoration: underline;
             color: inherit;
-            // font-weight: $fw-medium;
-
+            font-weight: $fw-medium;
+    
             @include attention() {
                 color: $ctis-blue-400;
             }
@@ -85,7 +80,7 @@
         position: absolute;
         display: none;
 
-        &:checked+.universities_filters_form_label {
+        &:checked + .universities_filters_form_label {
             background-color: $light-grey;
             border: 1px solid $medium-grey;
             transition: background-color 0.3s linear, border 0.3s linear;
@@ -111,17 +106,17 @@
 
 .internship_badge {
     display: block;
-    // width: 1.3em;
-    // height: 1.3em;
+    width: 1.3em;
+    height: 1.3em;
     margin: 0 1em;
-    // background-color: $medium-grey;
-    // color: $dark-grey;
+    background-color: $medium-grey;
+    color: $dark-grey;
     border-radius: 50%;
 
-    svg {
+    svg{
         display: block;
-        // width: 100%;
-        // height: 100%;
+        width: 100%;
+        height: 100%;
     }
 }
 
