--- a/pocket-ctis/styles/adminUserView.module.css
+++ b/pocket-ctis/styles/adminUserView.module.css
@@ -1,11 +1,13 @@
-.imageContainer{
+.imageContainer {
     position: relative;
 }
-.profileImage{
-    object-fit: cover; 
+
+.profileImage {
+    object-fit: cover;
     border-radius: 5px;
 }
-.imageEdit{
+
+.imageEdit {
     font-size: x-large;
     color: white;
     opacity: 0;
@@ -21,16 +23,18 @@
     transition: all 0.2s;
     cursor: pointer;
 }
-.imageEdit:hover{
+
+.imageEdit:hover {
     opacity: 1;
     background-color: rgba(245, 164, 37, 0.5);
 }
 
-.previewContainer{
+.previewContainer {
     position: relative;
     width: fit-content;
 }
-.previewRemover{
+
+.previewRemover {
     position: absolute;
     border-radius: 5px;
     font-size: x-large;
@@ -43,12 +47,13 @@
     transition: all 0.2s;
     cursor: pointer;
 }
-.previewRemover:hover{
+
+.previewRemover:hover {
     opacity: 1;
     background-color: rgba(245, 164, 37, 0.5);
 }
 
-.button{
+.button {
     border: none;
     background-color: #f5a425;
     border-radius: 5px;
@@ -58,7 +63,40 @@
     font-size: 14px;
     width: 100%;
 }
-.button:hover{
+
+.button:hover {
     transform: scale(1.01);
-    /* transform-origin: 0; */
+}
+
+.cvBtn {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    background-color: white;
+    display: flex;
+    bottom: 50px;
+    right: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 2px 2px #999;
+    padding: 4px;
+    text-decoration: none;
+    color: black;
+    font-size: 25px;
+    font-weight: normal;
+    line-height: 2em;
+    border-radius: 25px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    overflow: hidden;
+    transition: 0.3s;
+}
+
+.cvBtn:hover {
+    background: #f5a425;
+    color: white;
 }
